crates/cribo/tests/snapshots/bundled_code@future_imports_basic.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/future_imports_basic/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

from __future__ import annotations
import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        if getattr(module, '_cribo_machinery_loaded', False):
            module.__initialized__ = False
            module.__initializing__ = False
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('mypackage.submodule.utils', '_cribo_init___cribo_c3d681_mypackage_submodule_utils', 'mypackage_submodule_utils', False)
_cribo_finder.register('mypackage.core', '_cribo_init___cribo_41d36f_mypackage_core', 'mypackage_core', False)
_cribo_finder.register('mypackage.submodule', None, 'mypackage_submodule', True)
_cribo_finder.register('mypackage', None, 'mypackage', True)
mypackage_core = _cribo.types.SimpleNamespace(__name__='mypackage.core', __initializing__=False, __initialized__=False)
_cribo_finder.bind('mypackage.core', mypackage_core)
def _cribo_init___cribo_41d36f_mypackage_core(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'mypackage'
    Dict = _cribo.typing.Dict
    self.Dict = Dict
    List = _cribo.typing.List
    self.List = List
    Any = _cribo.typing.Any
    self.Any = Any

    def process_data(data: _cribo.typing.Dict[str, _cribo.typing.Any]) -> _cribo.typing.Dict[str, _cribo.typing.Any]:
        """Process input data and return results.\n\n    This function uses forward references in type hints.\n    """
        result: ProcessingResult = {"input": data, "processed": True, "output": _transform_data(data)}
        return result
    self.process_data = process_data

    def _transform_data(data: _cribo.typing.Dict[str, _cribo.typing.Any]) -> _cribo.typing.List[str]:
        """Transform data into list format."""
        return [f"{k}={v}" for k, v in data.items()]
    self._transform_data = _transform_data
    ProcessingResult = _cribo.typing.Dict[str, _cribo.typing.Any]
    self.ProcessingResult = ProcessingResult
    self.Dict = _cribo.typing.Dict
    self.List = _cribo.typing.List
    self.Any = _cribo.typing.Any
    self.__initialized__ = True
    self.__initializing__ = False
    return self
mypackage_core.__init__ = _cribo_init___cribo_41d36f_mypackage_core
mypackage = _cribo.types.SimpleNamespace(__name__='mypackage', __initializing__=False, __initialized__=False, __path__=[])
mypackage.core = mypackage_core
"""Package initialization with future import."""
mypackage_submodule_utils = _cribo.types.SimpleNamespace(__name__='mypackage.submodule.utils', __initializing__=False, __initialized__=False)
_cribo_finder.bind('mypackage.submodule.utils', mypackage_submodule_utils)
def _cribo_init___cribo_c3d681_mypackage_submodule_utils(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'mypackage.submodule'
    Dict = _cribo.typing.Dict
    self.Dict = Dict
    Any = _cribo.typing.Any
    self.Any = Any
    Union = _cribo.typing.Union
    self.Union = Union

    def validate_input(data: InputData) -> bool:
        """Validate input data structure.\n\n    Uses forward reference that requires future import.\n    """
        if not isinstance(data, dict):
            return False
        return "key" in data and isinstance(data.get("numbers"), list)
    self.validate_input = validate_input

    def format_output(data: _cribo.typing.Any) -> FormattedOutput:
        """Format data for output."""
        return f"Formatted: {data}"
    self.format_output = format_output
    InputData = _cribo.typing.Dict[str, _cribo.typing.Any]
    self.InputData = InputData
    FormattedOutput = _cribo.typing.Union[str, _cribo.typing.Dict[str, _cribo.typing.Any]]
    self.FormattedOutput = FormattedOutput
    self.Dict = _cribo.typing.Dict
    self.Any = _cribo.typing.Any
    self.Union = _cribo.typing.Union
    self.__initialized__ = True
    self.__initializing__ = False
    return self
mypackage_submodule_utils.__init__ = _cribo_init___cribo_c3d681_mypackage_submodule_utils
mypackage_submodule = _cribo.types.SimpleNamespace(__name__='mypackage.submodule', __initializing__=False, __initialized__=False, __path__=[])
mypackage.submodule = mypackage_submodule
mypackage_submodule.utils = mypackage_submodule_utils
"""Submodule with future imports."""
mypackage_core = _cribo_init___cribo_41d36f_mypackage_core(mypackage_core)
process_data = mypackage.core.process_data
mypackage_submodule_utils = _cribo_init___cribo_c3d681_mypackage_submodule_utils(mypackage_submodule_utils)
validate_input = mypackage.submodule.utils.validate_input
def main() -> None:
    """Main function with type annotations that require future import."""
    data = {"key": "value", "numbers": [1, 2, 3]}
    if validate_input(data):
        result = process_data(data)
        print(f"Processing result: {result}")
    else:
        print("Invalid input data")
if __name__ == "__main__":
    main()
submodule = mypackage.submodule
core = mypackage.core
