crates/cribo/tests/snapshots/bundled_code@import_shadowing.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/import_shadowing/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
_cribo_captured = {}
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type, _ModuleType=_cribo.types.ModuleType, _captured=_cribo_captured):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False) or _getattr(module, '__initialized__', False) and _getattr(module, '_cribo_registered', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _ModuleType(spec.name)
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                fresh._cribo_fresh_life = True
                return fresh
            return module
        module = _ModuleType(spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _captured[binding] if binding in _captured else _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _getattr=getattr, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        record_snapshot = not _getattr(module, '_cribo_fresh_life', False) and not _getattr(module, '__initialized__', False) and (self._namespace is not None or self._entry[1] is not None)
        if init is None:
            if record_snapshot and key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if record_snapshot and key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('package_a', None, 'package_a', True)
_cribo_finder_local.register('package_b', None, 'package_b', True)
_cribo_finder_local.register('utils', None, None, False, {'transform': 'transform'})
_cribo_finder.register('package_a.processor', None, None, False, {'process_a': 'process_a'})
_cribo_finder.register('package_b.processor', None, None, False, {'process_b': 'process_b'})
package_a = _cribo.types.SimpleNamespace(__name__='package_a')
utils = _cribo.types.SimpleNamespace(__name__='utils')
def transform(text):
    return "TOP_LEVEL_UTILS"
transform.__module__ = 'utils'
utils.transform = transform
package_a_processor = _cribo.types.SimpleNamespace(__name__='package_a.processor', __doc__='Package A processor that imports utils expecting package_a.utils')
package_a.processor = package_a_processor
"""Package A processor that imports utils expecting package_a.utils"""
def process_a(data):
    return transform(data)
process_a.__module__ = 'package_a.processor'
package_a_processor.process_a = process_a
package_b_processor = _cribo.types.SimpleNamespace(__name__='package_b.processor', __doc__='Package B processor that imports utils expecting package_b.utils')
package_b = _cribo.types.SimpleNamespace(__name__='package_b', __initializing__=False, __initialized__=False, __path__=[])
package_b.processor = package_b_processor
"""Package B processor that imports utils expecting package_b.utils"""
def process_b(data):
    return transform(data)
process_b.__module__ = 'package_b.processor'
package_b_processor.process_b = process_b
_cribo_captured['transform'] = transform
_cribo_captured['process_a'] = process_a
_cribo_captured['process_b'] = process_b
"""Test case demonstrating import shadowing issue.\n\nThis shows how the same import 'utils' resolves to the same top-level\nfile for all modules, even though package_a and package_b each have\ntheir own utils.py that they might expect to use.\n\nIn Python, this behavior is \"correct\" - when running from the fixture\ndirectory, 'import utils' finds the top-level utils.py for everyone.\n\nBut for a bundler, this demonstrates the challenge: without proper\ncontext, it can't know whether 'import utils' in package_a/processor.py\nwas intended to import package_a/utils.py or the top-level utils.py.\n"""
result_a = process_a("test")
result_b = process_b("test")
print(f"Package A result: {result_a}")
print(f"Package B result: {result_b}")
assert result_a == "TOP_LEVEL_UTILS"
assert result_b == "TOP_LEVEL_UTILS"
print("Both packages used the top-level utils module (as Python does).")
processor = package_b.processor
